--- a/BookSwapClient/package.json
+++ b/BookSwapClient/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "expo": "~42.0.1",
+    "expo-barcode-scanner": "^10.2.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
