--- a/BookSwapClient/package.json
+++ b/BookSwapClient/package.json
@@ -8,6 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/arima-madurai": "^0.2.0",
+    "@expo-google-fonts/inter": "^0.2.0",
+    "@expo-google-fonts/rosario": "^0.2.0",
+    "@expo-google-fonts/yusei-magic": "^0.2.0",
     "@react-native-async-storage/async-storage": "^1.15.8",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-picker/picker": "^2.1.0",
@@ -15,7 +19,10 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "expo": "~42.0.1",
+    "expo-app-loading": "^1.1.2",
     "expo-barcode-scanner": "^10.2.2",
+    "expo-font": "~9.2.1",
+    "expo-linear-gradient": "~9.2.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -27,8 +34,7 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12",
-    "expo-linear-gradient": "~9.2.0"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
