--- a/BookSwapClient/package.json
+++ b/BookSwapClient/package.json
@@ -34,7 +34,8 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "lottie-react-native": "4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
