--- a/BookSwapServer/package.json
+++ b/BookSwapServer/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^2.0.13"
   },
   "devDependencies": {
+    "@testing-library/react-native": "^7.2.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
