--- a/BookSwapClient/package.json
+++ b/BookSwapClient/package.json
@@ -5,7 +5,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "node_modules/.bin/jest",
+    "test:debug": "node --inspect-brk node_modules/jest/bin/jest.js --runInBand"
   },
   "dependencies": {
     "@expo-google-fonts/arima-madurai": "^0.2.0",
@@ -24,6 +26,8 @@
     "expo-font": "~9.2.1",
     "expo-linear-gradient": "~9.2.0",
     "expo-status-bar": "~1.0.4",
+    "jest": "^27.2.4",
+    "jest-expo": "^42.1.0",
     "lottie-react-native": "4.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -40,6 +44,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "private": true
 }
