--- a/BookSwapServer/package.json
+++ b/BookSwapServer/package.json
@@ -4,17 +4,16 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
     "prestart": "npm run build",
-    "start": "node ."
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -23,13 +22,19 @@
     "nodemon": "^2.0.13"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.15.6",
     "@testing-library/react-native": "^7.2.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.5",
-    "@types/node": "^16.10.2",
+    "babel-jest": "^27.2.4",
+    "cross-env": "^7.0.3",
+    "jest": "^27.2.4",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "tslint": "^6.1.3",
     "typescript": "^4.4.3"
