--- a/BookSwapClient/package.json
+++ b/BookSwapClient/package.json
@@ -16,13 +16,19 @@
       "**/*.{js,jsx}",
       "!**/coverage/**",
       "!**/node_modules/**",
-      "!**/babel.config.js",
-      "!**/jest.setup.js"
+      "!**/babel.config.js"
     ],
     "transformIgnorePatterns": [
       "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
     ],
-    "setupFiles": ["./jest.setup.js"]
+    "setupFiles": [
+      "./jest.setup.js"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
   },
   "dependencies": {
     "@expo-google-fonts/arima-madurai": "^0.2.0",
@@ -42,8 +48,8 @@
     "expo-font": "~9.2.1",
     "expo-linear-gradient": "~9.2.0",
     "expo-status-bar": "~1.0.4",
-    "jest": "^27.2.4",
-    "jest-expo": "^42.1.0",
+    "jest": "~26.6.3",
+    "jest-fetch-mock": "~3.0.3",
     "lottie-react-native": "4.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -56,6 +62,7 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-testing-library": "^6.0.0",
     "react-native-web": "~0.13.12",
     "react-test-renderer": "^17.0.2",
     "undefined": "@react-native-async-storage/async-storage/"
@@ -63,8 +70,8 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@testing-library/jest-native": "^4.0.2",
-    "@testing-library/react-native": "^7.2.0",
-    "jest-expo": "^42.1.0"
+    "@testing-library/react-native": "~7.2.0",
+    "jest-expo": "~41.0.0"
   },
   "private": true
 }
