refactor(apiservice): refactored apiservice to typescript and created types for the env variables

--- a/BookSwapClient/.env.example
+++ b/BookSwapClient/.env.example
@@ -1,4 +1,4 @@
 SECRET_KEY=here-goes-your-secret-key
 REACT_APP_API_KEY=here-goes-your-google-book-api-key
 BASE_URL=https://192.168.1.23
-CLIENT_PORT=3000
+SERVER_PORT=3000
