--- a/BookSwapClient/tsconfig.json
+++ b/BookSwapClient/tsconfig.json
@@ -5,19 +5,25 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "jsx": "react-native",
-    "lib": ["es2017"],
+    "lib": [
+      "es2017"
+    ],
     "moduleResolution": "node",
     "noEmit": true,
     "target": "esnext",
     "noImplicitAny": false,
     "resolveJsonModule": true,
     "strict": true,
-    "typeRoots": ["@types", "./node_modules/@types"]
+    "typeRoots": [
+      "@types",
+      "./node_modules/@types"
+    ]
   },
   "exclude": [
     "node_modules",
     "babel.config.js",
     "metro.config.js",
     "jest.config.js"
-  ]
+  ],
+  "extends": "expo/tsconfig.base"
 }
