--- a/BookSwapServer/package.json
+++ b/BookSwapServer/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.0.7"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.6",
     "ts-node": "^10.4.0",
