--- a/BookSwapClient/package.json
+++ b/BookSwapClient/package.json
@@ -17,6 +17,7 @@
     "@react-native-picker/picker": "^2.1.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.7",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
