--- a/BookSwapClient/tsconfig.json
+++ b/BookSwapClient/tsconfig.json
@@ -11,7 +11,7 @@
     "moduleResolution": "node",
     "noEmit": true,
     "target": "esnext",
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "resolveJsonModule": true,
     "strict": true,
     "typeRoots": [
