--- a/BookSwapClient/tsconfig.json
+++ b/BookSwapClient/tsconfig.json
@@ -5,19 +5,16 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "jsx": "react-native",
-    "lib": [
-      "es2017"
-    ],
+    "lib": ["es2017"],
     "moduleResolution": "node",
     "noEmit": true,
     "target": "esnext",
     "noImplicitAny": true,
+    "strictNullChecks": true,
     "resolveJsonModule": true,
+    "strictFunctionTypes": true,
     "strict": true,
-    "typeRoots": [
-      "@types",
-      "./node_modules/@types"
-    ]
+    "typeRoots": ["@types", "./node_modules/@types"]
   },
   "exclude": [
     "node_modules",
